third_party/move/tools/move-unit-test/tests/test_sources/abort_location.exp
Running Move unit tests
[ FAIL    ] 0xc0ffee::Example::test_validate_parameters
0xc0ffee::Example::test_validate_parameters
Output: Ok(Changes { accounts: {} })

Test failures:

Failures in 0xc0ffee::Example:

┌── test_validate_parameters ──────
│ error[E11001]: test failure
│    ┌─ abort_location.move:36:13
│    │
│  9 │     fun validate_parameters(
│    │         ------------------- In this function in 0xc0ffee::Example
│    ·
│ 36 │             assert!(
│    │             ^^^^^^ Test was not expected to error, but it aborted with code 2 originating in the module 0000000000000000000000000000000000000000000000000000000000c0ffee::Example rooted here
│ 
│ 
│ stack trace
│ 	Example::test_validate_parameters(tests/test_sources/abort_location.move:86-92)
│ 
└──────────────────

Test result: FAILED. Total tests: 1; passed: 0; failed: 1
